crates/ruff_python_parser/tests/snapshots/invalid_syntax@comprehension_missing_for_after_async.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/comprehension_missing_for_after_async.py
---
## AST

```
Module(
    ModModule {
        range: 0..28,
        body: [
            Expr(
                StmtExpr {
                    range: 0..7,
                    value: Generator(
                        ExprGenerator {
                            range: 0..7,
                            elt: Name(
                                ExprName {
                                    range: 1..1,
                                    id: "",
                                    ctx: Invalid,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 1..6,
                                    target: Name(
                                        ExprName {
                                            range: 6..6,
                                            id: "",
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            range: 6..6,
                                            id: "",
                                            ctx: Invalid,
                                        },
                                    ),
                                    ifs: [],
                                    is_async: true,
                                },
                            ],
                            parenthesized: true,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 8..27,
                    value: Generator(
                        ExprGenerator {
                            range: 8..27,
                            elt: Name(
                                ExprName {
                                    range: 9..10,
                                    id: "x",
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 11..26,
                                    target: Name(
                                        ExprName {
                                            range: 17..18,
                                            id: "x",
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            range: 22..26,
                                            id: "iter",
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [],
                                    is_async: true,
                                },
                            ],
                            parenthesized: true,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | (async)
  |  ^^^^^ Syntax Error: Expected an expression
2 | (x async x in iter)
  |


  |
1 | (async)
  |       ^ Syntax Error: Expected 'for', found ')'
2 | (x async x in iter)
  |


  |
1 | (async)
2 | (x async x in iter)
  |          ^ Syntax Error: Expected 'for', found name
  |
